2005-06-07  Alex Roitman  <shura@gramps-project.org>
	* src/gramps.glade (selecty_person): Change positioning; add icon.
	* src/edit_person.glade (event_tab): Correct tooltips.
	* src/SelectEvent.py: Add to CVS.
	* src/Makefile.am: Ship SelectEvent.py file.
	* src/SelectChild.py (build_list): Use mapping from Utils.
	* src/ReadGrdb.py (importData): Properly copy event table.
	* src/ListBox.py: Properly fill in the Combo maps without
	collisions; Add Role to the EventListbox; Support selecting an
	existing Event object.
	* src/GrampsInMemDB.py: Support for event id table.
	* src/GrampsDbBase.py: Support for event id table.
	* src/GrampsBSDDB.py: Support for event id table; emit
	event-delete signal when events are deleted.
	* src/EventView.py: Support deleting events.
	* src/EventEdit.py: Support deleting events; Proper adding events.

2005-06-07  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* various: const to RelLib transitition.

2005-06-07  Alex Roitman  <shura@gramps-project.org>
	* src/EventView.py (build_columns): Do not artificially create
	an extra column.

2005-06-06  Alex Roitman  <shura@gramps-project.org>
	* src/AttrEdit.py: proper type selector support.
	* src/AutoComp.py (by_value): Use locale-aware sorting.
	* src/EditPerson.py: Support select button for the event tab.
	* src/EventEdit.py (EventRefEditor): Editor for both events and
	event refs.
	* src/ListBox.py: Support for select button; Proper removal of
	entries; Proper Event/ref editing support; fixes for combos.
	* src/NameEdit.py: Typo.
	* src/edit_person.glade: Add select button to the event tab.
	* src/gramps.glade: Add new editor for both events and refs.

	* src/DisplayModels.py: Support for event view.
	* src/EventEdit.py: Commit event on OK.
	* src/GrampsDbBase.py: Event column order and event cursor.
	* src/GrampsInMemDB.py: Event cursor.
	* src/gramps.glade: Event View, rework buttons.
	* src/gramps_main.py: Event View support.
	* src/EventView.py: Add to CVS. 